# command-guardian

./: .gitignore  LICENSE  README.md  RELEASE_CHECKLIST.md  pyproject.toml  release.ps1
.github/workflows/: ci.yml
command_guardian/guardian/: __init__.py  classifier.py  cli.py  policy.py  receipts.py  runner.py  tokens.py  verify.py
tests/: test_classifier.py  test_policy.py  test_receipts.py  test_runner_enforcement.py  test_verify.py
